fix:  responsiveness on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 @import "tailwindcss";
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -29,11 +32,46 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #9e9e9e;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #dfdfdf;
+  border-radius: 5px;
 }
 
 h1 {
-  font-size: 1.25em;
-  line-height: 1.1;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+th {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+td {
+  font-weight: 400;
+  font-size: 16px;
 }
 
 button {
